# ltg

./: README.txt  TODO.txt  cards.js  combinators.js  d8.patch  killer.js  machine.js  main.js  play.js  play.sh  player.js  tournamentmachine.js  tournamentmachine.sh
games/: game1.txt
hs-flushot/: flushot.cabal
hs-flushot/src/: Main.hs
hs-flushot/src/LTG/: Cards.hs  Game.hs  Play.hs  Player.hs
hs-flushot/src/Main/: Generate.hs  Interactive.hs  Live.hs  Match.hs  Players.hs  Utils.hs
tests/: machineTest.js  test.js  test.sh
