name: flushot
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any, hscurses -any, mtl -any, process -any,
               random -any, vector -any
stability:
homepage:
package-url:
bug-reports:
synopsis: Team FluShot's ICFP 2011 submission
description: .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: flushot
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: LTG.Cards LTG.Game LTG.Play Main.Generate
               Main.Interactive Main.Live Main.Match Main.Players Main.Utils
ghc-prof-options:
ghc-shared-options:
ghc-options: -Wall -Werror -O
hugs-options:
nhc98-options:
jhc-options: